--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
+    "mermaid": "^11.12.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
